[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "eagle", email = "eagle@42.fr"}
]
maintainers = [
    {name = "eagle", email = "eagle@42.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/eagle/ft_package"
"Bug Reports" = "https://github.com/eagle/ft_package/issues"
"Source" = "https://github.com/eagle/ft_package"

[tool.setuptools.packages.find]
where = ["."]
include = ["ft_package*"]
